# kbench_liarsbar

./: .gitignore  README.md  pyproject.toml
src/kbench_liarsbar/: __init__.py  config.py  gradio_app.py  runner.py
src/kbench_liarsbar/agent/: __init__.py  base.py  llm_default.py  validation.py
tests/: test_liarsbar.py
